didi.css
/* ... */
.hspace-2+.hspace-2{margin-left:2px}
.vspace-2+.vspace-2{display:block;margin-top:2px}
.hspace-4+.hspace-4{margin-left:4px}
.vspace-4+.vspace-4{display:block;margin-top:4px}
.hspace-8+.hspace-8{margin-left:8px}
.vspace-8+.vspace-8{display:block;margin-top:8px}
.hspace-12+.hspace-12{margin-left:12px}
.vspace-12+.vspace-12{display:block;margin-top:12px}
.hspace-16+.hspace-16{margin-left:16px}
.vspace-16+.vspace-16{display:block;margin-top:16px}
.hspace-24+.hspace-24{margin-left:24px}
.vspace-24+.vspace-24{display:block;margin-top:24px}
.hspace-32+.hspace-32{margin-left:32px}
.vspace-32+.vspace-32{display:block;margin-top:32px}
.hspace-64+.hspace-64{margin-left:64px}
.vspace-64+.vspace-64{display:block;margin-top:64px}

/* spacing between - relative */

.hspace-tiny+.hspace-tiny{margin-left:1%}
.vspace-tiny+.vspace-tiny:before{content:"";display:block;margin-top:1%}
.hspace-small+.hspace-small{margin-left:2%}
.hspace-small+.hspace-small:before{content:"";display:block;margin-top:2%}
.hspace+.hspace,.hspace-medium+.hspace-medium{margin-left:4%}
.vspace{display:block}
.vspace+.vspace,.vspace-medium+.vspace-medium{margin-top:4%}
.hspace-large+.hspace-large{margin-left:6%}
.vspace-large+.vspace-large{margin-top:6%}

/* text alignment */
.left-text { text-align: left; }
.right-text { text-align: right; }

/* text-spacing */
.tight-text { line-height: 1}
.single-spacing { line-height: 1em}
.one-half-spacing { line-height: 1.5em }
.double-spacing { line-height: 2em }
.tripple-spacing { line-height: 3em }


/* text letter spacing */
.letter-space,.letter-space-medium { letter-spacing: 2 }
.letter-space-large { letter-spacing: 4 }

/* text transformation */
.lowercase { text-transform: lowercase; }
.underlined { text-decoration: underline; }
.uppercase { text-transform: uppercase; }
.undecorated { text-decoration: none; }
.nowrap { white-space: nowrap}
.normal-wrap { white-space: normal}
.truncate-word,.ellipsis { white-space: nowrap; overflow: hidden; text-overflow: ellipsis}
.break-word{-ms-hyphens: auto;-moz-hyphens: auto;-webkit-hyphens: auto; hyphens: auto;word-wrap: break-word;overflow-wrap:break-word;text-overflow: ellipsis}
.bullet-disc{ list-style-type: disc}

/* vertical alignment */
.vertical-bottom { vertical-align: bottom; }
.vertical-center,.vertical-middle { vertical-align: middle; }
.vertical-top { vertical-align: top; }

/* rotate transformation */
.vertical-up { -webkit-transform:rotate(270deg);transform:rotate(270deg)}
.vertical-down { -webkit-transform:rotate(90deg);transform:rotate(90deg)}

/* responsive widths */
/* fractional width */
.w-1-2,.half {width:49.99999%}
.w-1-3,.third {width:33.33333%}
.w-1-4,.quarter {width:24.99999%}
.w-1-5,.fifth {width:19.99999%}
.w-1-6,.sixth {width:16.66666%}
.w-1-7,.seventh {width:14.28527%}
.w-1-8,.eighth {width:12.49999%}
.w-1-9,.nineth {width:11.11111%}
.w-1-10,.tenth {width:9.99999%}
.w-1-11 {width:9.09090%}
.w-1-12 {width:8.33333%}
.w-2-3,.two-thirds {width:66.66666%}
.w-2-5 {width:39.99999%}
.w-2-7 {width:28.57141%}
.w-2-9 {width:22.22222%}
.w-2-11 {width:18.18181%}
.w-3-4,.three-quarter{width:74.99999%}
.w-3-5 {width:59.99999%}
.w-3-7 {width:41.85714%}
.w-3-8 {width:37.49999%}
.w-3-10 {width:29.99999%}
.w-3-11 {width:27.27272%}
.w-4-5,.four-fifth {width:79.99999%}
.w-4-7 {width:47.14285%}
.w-4-9 {width:44.44444%}
.w-4-10 {width:39.99999%}
.w-4-11 {width:36.363636%}
.w-5-6 {width:83.33333%}
.w-5-7 {width:71.28571%}
.w-5-8 {width:62.49999%}
.w-5-9 {width:55.55555%}
.w-5-11 {width:45.45454%}
.w-5-12 {width:41.66666%}
.w-6-7 {width:85.71428%}
.w-6-11 {width:54.54545%}
.w-7-8 {width:87.49999%}
.w-7-10 {width:69.99999%}
.w-7-11 {width:63.63636%}
.w-7-12 {width:58.33333%}
.w-8-9 {width:88.88888%}
.w-8-11 {width:72.72727%}
.w-9-10 {width:89.99999%}
.w-9-11 {width:81.81818%}

/* responsive grid */
.grid>*,.col{float:left;display: inline-block}
.col.centered{float:none;display:block}
.col.float-right{float:right}
.grid.space>*{margin-bottom:2%;margin-right:2%}
.center-contents>.col{float:none}

/* autofit grid */
.grid.fit>:first-child:nth-last-child(1){width:100%}
.grid.fit>:first-child:nth-last-child(2),.grid.fit>:first-child:nth-last-child(2) ~ *{width:50%}
.grid.fit.space>:first-child:nth-last-child(2),.grid.fit.space>:first-child:nth-last-child(2) ~ *{width:49%}
.grid.fit>:first-child:nth-last-child(3),.grid.fit>:first-child:nth-last-child(3) ~ *{width:33.333%}
.grid.fit.space>:first-child:nth-last-child(3),.grid.fit.space>:first-child:nth-last-child(3) ~ *{width:32%}
.grid.fit>:first-child:nth-last-child(4),.grid.fit>:first-child:nth-last-child(4) ~ *{width:25%}
.grid.fit.space>:first-child:nth-last-child(4),.grid.fit.space>:first-child:nth-last-child(4) ~ *{width:23.5%}
.grid.fit>:first-child:nth-last-child(5),.grid.fit>:first-child:nth-last-child(5) ~ *{width:20%}
.grid.fit.space>:first-child:nth-last-child(5),.grid.fit.space>:first-child:nth-last-child(5) ~ *{width:18.4%}
.grid.fit.space>:last-child{margin-right:0}
/* ... */

